@@ -24,7 +24,8 @@ import com.draeger.medical.sdccc.util.TestRunObserver;
 import java.io.IOException;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Stream;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 import org.junit.jupiter.api.BeforeEach;
@@ -61,7 +62,7 @@ public class InvariantParticipantModelHandleTest extends InjectorTestBase {
     @TestIdentifier(EnabledTestConfig.BICEPS_R0007_0)
     @TestDescription("Starting from the initially retrieved mdib, ensures that for each mdib version, "
             + " all contained handles are unique.")
-    void testRequirementR0007() throws NoTestData {
+    void testRequirementR0007() throws NoTestData, IOException {
         // NOTE: MdibHistorian checks the uniqueness of Handles in all MdibVersions.
         //       However, its checks are missing duplicate handles introduced by ContextReports.
         //       Hence, we cannot fully rely on the MdibHistorian and have to check handle
@@ -69,53 +70,48 @@ public class InvariantParticipantModelHandleTest extends InjectorTestBase {
         final var mdibHistorian = mdibHistorianFactory.createMdibHistorian(
                 messageStorage, getInjector().getInstance(TestRunObserver.class));
 
-        final List<String> sequenceIds;
-        try {
-            sequenceIds = mdibHistorian.getKnownSequenceIds();
-        } catch (IOException e) {
-            fail(e);
-            // unreachable
-            throw new RuntimeException(e);
-        }
+        final AtomicInteger handlesSeen = new AtomicInteger();
 
-        int handlesSeen = 0;
-        for (String sequenceId : sequenceIds) {
-            try (final MdibHistorian.HistorianResult history = mdibHistorian.episodicReportBasedHistory(sequenceId)) {
-                var current = history.next();
-                while (current != null) {
-                    final var allEntities = current.findEntitiesByType(AbstractDescriptor.class);
+        try (final Stream<String> sequenceIds = mdibHistorian.getKnownSequenceIds()) {
+            sequenceIds.forEach(sequenceId -> {
+                try (final MdibHistorian.HistorianResult history =
+                        mdibHistorian.episodicReportBasedHistory(sequenceId)) {
+                    var current = history.next();
+                    while (current != null) {
+                        final var allEntities = current.findEntitiesByType(AbstractDescriptor.class);
 
-                    final List<String> entityHandles =
-                            allEntities.stream().map(MdibEntity::getHandle).collect(Collectors.toList());
-                    final HashSet<String> allHandles = new HashSet<>();
-                    for (var handle : entityHandles) {
-                        assertFalse(
-                                allHandles.contains(handle),
-                                "Handle '" + handle + "' is not unique in mdib version " + current.getMdibVersion()
-                                        + ".");
-                        allHandles.add(handle);
+                        final List<String> entityHandles =
+                                allEntities.stream().map(MdibEntity::getHandle).toList();
+                        final HashSet<String> allHandles = new HashSet<>();
+                        for (var handle : entityHandles) {
+                            assertFalse(
+                                    allHandles.contains(handle),
+                                    "Handle '" + handle + "' is not unique in mdib version " + current.getMdibVersion()
+                                            + ".");
+                            allHandles.add(handle);
+                        }
+
+                        final List<AbstractContextState> contextStates =
+                                current.findContextStatesByType(AbstractContextState.class);
+                        final List<String> contextStateHandles = contextStates.stream()
+                                .map(AbstractMultiState::getHandle)
+                                .toList();
+                        for (var cSHandle : contextStateHandles) {
+                            assertFalse(
+                                    allHandles.contains(cSHandle),
+                                    "contextState handle '" + cSHandle + "' is not unique in Mdib version "
+                                            + current.getMdibVersion() + ".");
+                            allHandles.add(cSHandle);
+                        }
+                        handlesSeen.addAndGet(allHandles.size());
+                        current = history.next();
                     }
-
-                    final List<AbstractContextState> contextStates =
-                            current.findContextStatesByType(AbstractContextState.class);
-                    final List<String> contextStateHandles = contextStates.stream()
-                            .map(AbstractMultiState::getHandle)
-                            .collect(Collectors.toList());
-                    for (var cSHandle : contextStateHandles) {
-                        assertFalse(
-                                allHandles.contains(cSHandle),
-                                "contextState handle '" + cSHandle + "' is not unique in Mdib version "
-                                        + current.getMdibVersion() + ".");
-                        allHandles.add(cSHandle);
-                    }
-                    handlesSeen += allHandles.size();
-                    current = history.next();
+                } catch (PreprocessingException | ReportProcessingException e) {
+                    fail(e);
                 }
-            } catch (PreprocessingException | ReportProcessingException e) {
-                fail(e);
-            }
+            });
         }
-        assertTestData(handlesSeen, "No Data to perform test on");
+        assertTestData(handlesSeen.get(), "No Data to perform test on");
     }
 
     @Test
@@ -125,51 +121,46 @@ public class InvariantParticipantModelHandleTest extends InjectorTestBase {
     @TestDescription("Starting from the initially retrieved mdib, applies every episodic report to the mdib and"
             + " verifies that every descriptor and state handle present only contains valid ASCII characters within the"
             + " permitted range.")
-    void testRequirementR0105() throws NoTestData {
+    void testRequirementR0105() throws NoTestData, IOException {
         final var mdibHistorian = mdibHistorianFactory.createMdibHistorian(
                 messageStorage, getInjector().getInstance(TestRunObserver.class));
 
-        final List<String> sequenceIds;
-        try {
-            sequenceIds = mdibHistorian.getKnownSequenceIds();
-        } catch (IOException e) {
-            fail(e);
-            // unreachable
-            throw new RuntimeException(e);
-        }
-
         final var handlesSeen = new HashSet<String>();
-        for (String sequenceId : sequenceIds) {
-            try (final MdibHistorian.HistorianResult history = mdibHistorian.episodicReportBasedHistory(sequenceId)) {
 
-                RemoteMdibAccess first = history.next();
-                while (first != null) {
-                    final var mdibVersion = first.getMdibVersion();
-                    final var allEntities = first.findEntitiesByType(AbstractDescriptor.class);
-                    for (MdibEntity entity : allEntities) {
-                        // descriptor handle
-                        assertTrue(
-                                isWithinPermittedASCIIRange(entity.getHandle()),
-                                String.format(
-                                        "Invalid descriptor handle %s found in mdib version %s",
-                                        entity.getHandle(), mdibVersion));
-                        handlesSeen.add(entity.getHandle());
+        try (final Stream<String> sequenceIds = mdibHistorian.getKnownSequenceIds()) {
+            sequenceIds.forEach(sequenceId -> {
+                try (final MdibHistorian.HistorianResult history =
+                        mdibHistorian.episodicReportBasedHistory(sequenceId)) {
 
-                        // state handles
-                        entity.doIfMultiState(states -> states.forEach(state -> {
-                            handlesSeen.add(state.getHandle());
+                    RemoteMdibAccess first = history.next();
+                    while (first != null) {
+                        final var mdibVersion = first.getMdibVersion();
+                        final var allEntities = first.findEntitiesByType(AbstractDescriptor.class);
+                        for (MdibEntity entity : allEntities) {
+                            // descriptor handle
                             assertTrue(
-                                    isWithinPermittedASCIIRange(state.getHandle()),
+                                    isWithinPermittedASCIIRange(entity.getHandle()),
                                     String.format(
-                                            "Invalid multi state handle %s found in mdib version %s",
-                                            state.getHandle(), mdibVersion));
-                        }));
+                                            "Invalid descriptor handle %s found in mdib version %s",
+                                            entity.getHandle(), mdibVersion));
+                            handlesSeen.add(entity.getHandle());
+
+                            // state handles
+                            entity.doIfMultiState(states -> states.forEach(state -> {
+                                handlesSeen.add(state.getHandle());
+                                assertTrue(
+                                        isWithinPermittedASCIIRange(state.getHandle()),
+                                        String.format(
+                                                "Invalid multi state handle %s found in mdib version %s",
+                                                state.getHandle(), mdibVersion));
+                            }));
+                        }
+                        first = history.next();
                     }
-                    first = history.next();
+                } catch (PreprocessingException | ReportProcessingException e) {
+                    fail(e);
                 }
-            } catch (PreprocessingException | ReportProcessingException e) {
-                fail(e);
-            }
+            });
         }
         assertTestData(handlesSeen, "No Data to perform test on");
     }
